--- a/index.html
+++ b/index.html
@@ -1,18 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>GRID LAYOUT</title>
 </head>
+
 <body>
     <div class="grid-container">
-        <div class="header box">header</div>
-        <div class="sidebar box">sidebar</div>
-        <div class="main box">main</div>
-        <div class="footer box">footer</div>
-        
+        <div class="header box">
+            <nav>
+                <h1>ECOMMERCE</h1>
+            </nav>
+        </div>
+        <div class="sidebar box">
+            <div class="categorias-container">
+                <h3>Categorias</h3>
+                <div class="item-categoria">Perfumes (13)</div>
+                <div class="item-categoria">Ropa (21)</div>
+                <div class="item-categoria">Accesorios (41)</div>
+                <div class="item-categoria">Zapatos (10)</div>
+            </div>
+        </div>
+        <div class="main box">
+            <div class="product-container">
+                <img src="./assets/img/1.jpeg" alt="Perfume">
+                <h3>Titulo</h3>
+                <div>Precio</div>
+                <button>Comprar</button>
+            </div>
+            <div class="product-container">
+                <img src="./assets/img/2.jpeg" alt="Perfume">
+                <h3>Titulo</h3>
+                <div>Precio</div>
+                <button>Comprar</button>
+            </div>
+            <div class="product-container">
+                <img src="./assets/img/3.jpeg" alt="Perfume">
+                <h3>Titulo</h3>
+                <div>Precio</div>
+                <button>Comprar</button>
+            </div>
+            <div class="product-container">
+                <img src="./assets/img/4.jpg" alt="Perfume">
+                <h3>Titulo</h3>
+                <div>Precio</div>
+                <button>Comprar</button>
+            </div>
+        </div>
+        <div class="footer box">ECOMMERCE 2023</div>
+
     </div>
 </body>
+
 </html>
